--- a/canary/canary.yaml
+++ b/canary/canary.yaml
@@ -5,49 +5,28 @@ metadata:
   namespace: test
 spec:
   provider: nginx
-  # deployment reference
   targetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: podinfo
-  # ingress reference
   ingressRef:
     apiVersion: networking.k8s.io/v1
     kind: Ingress
     name: podinfo
-  # HPA reference (optional)
-  autoscalerRef:
-    apiVersion: autoscaling/v2beta2
-    kind: HorizontalPodAutoscaler
-    name: podinfo
-  # the maximum time in seconds for the canary deployment
-  # to make progress before it is rollback (default 600s)
   progressDeadlineSeconds: 60
   service:
-    # ClusterIP port number
     port: 80
-    # container port number or name
     targetPort: 9898
   analysis:
-    # schedule interval (default 60s)
     interval: 10s
-    # max number of failed metric checks before rollback
     threshold: 10
-    # max traffic percentage routed to canary
-    # percentage (0-100)
     maxWeight: 50
-    # canary increment step
-    # percentage (0-100)
     stepWeight: 5
-    # NGINX Prometheus checks
     metrics:
     - name: request-success-rate
-      # minimum req success rate (non 5xx responses)
-      # percentage (0-100)
       thresholdRange:
         min: 99
       interval: 1m
-    # testing (optional)
     webhooks:
       - name: acceptance-test
         type: pre-rollout
@@ -60,4 +39,4 @@ spec:
         url: http://flagger-loadtester.test/
         timeout: 5s
         metadata:
-          cmd: "hey -z 1m -q 10 -c 2 http://app.example.com/"
+          cmd: "hey -z 1m -q 10 -c 2 http://podinfo.com/"
